force-app/main/default/objects/Designation_History__c/Designation_History__c.object-meta.xml
<CustomObject>
    <label>Designation History</label>
    <nameField>
        <displayFormat>CH-{0000000}</displayFormat>
        <label>Designation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Designation History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>