force-app/main/default/objects/Designation_History__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Designation Histories</relationshipLabel>
    <relationshipName>Designation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>