force-app/main/default/objects/Designation_History__c/fields/Funding_Priority__c.field-meta.xml
<CustomField>
    <fullName>Funding_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Priority</label>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Designation History</relationshipLabel>
    <relationshipName>Designation_History</relationshipName>
    <type>Lookup</type>
</CustomField>